--- a/src/App.css
+++ b/src/App.css
@@ -46,13 +46,14 @@
 
 .search button {
   display: block;
-  margin: 1em auto;
+  margin: 1em auto 0 auto;
   background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
   border: none;
-  padding: 1em 2em;
+  padding: 1rem 4rem;
   border-radius: 2px;
   color: rgb(255, 255, 255);
   box-shadow: 0px 0px 8px 10px #46464626;
+  font-size: 48px;
 }
 
 .search button:hover {
