--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@ html, body, #root {
   flex-direction: column; */
   min-height: 100%;
   text-align: center;
-  /* background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%); */
-  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+  /* background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%); */
   background-repeat: no-repeat;
   
 }
