--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,10 @@ button:hover {
   box-shadow: 0px 0px 8px 3px #46464626;
 }
 
-
+.blocked {
+  pointer-events: none;
+  background-image: linear-gradient(120deg, #ffffff 0%, #c8c8c8 100%);
+}
 
 .present{
   /* background-color: red; */
